--- a/Application/Home/View/Index/detail.html
+++ b/Application/Home/View/Index/detail.html
@@ -49,7 +49,7 @@
     </section>
 
     <div class="container">
-    <h3>华山论剑</h3>
+    <h3>华山论剑</h3> <a href="http://127.0.0.1:8000/" target="_blank" style="color: #9e2630;font-size: 16px;">点击借书</a>
     <div id="contentContainer">
     
     </div><br>
